[package]
name = "stryke-mssql"
version = "0.6.0"
edition = "2021"
description = "Microsoft SQL Server cdylib for the stryke `mssql` package — query/execute/batch over tiberius, dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-mssql"
homepage = "https://menketechnologies.github.io/stryke-mssql/"
publish = false

[lib]
name = "stryke_mssql"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# tiberius is the pure-Rust TDS / SQL Server driver. It is async, so the cdylib
# embeds a tokio runtime and presents a blocking facade — matching the sync
# connection-cache model the other stryke data packages use.
tiberius = { version = "0.12", default-features = false, features = [
    "tds73",
    "rustls",
    "chrono",
    "rust_decimal",
] }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "time", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
rust_decimal = "1"
uuid = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
